[bugfix] fix problem with wrong vertical alignment

--- a/moosic/app/assets/stylesheets/authentication.scss
+++ b/moosic/app/assets/stylesheets/authentication.scss
@@ -12,7 +12,7 @@
 
 .row {
   display: table-cell;
-  vertical-align: middle;
+  vertical-align: middle !important;
 }
 
 .center-block {
